# Machine-learning-Ops-Deployment-Inference

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.beam  Dockerfile.fastapi  Readme.md  debug_deployment.sh  deploy_dataflow_streaming.sh  pipeline-iris-pubsub-inference.yaml  pipeline.yaml  pyproject.toml  requirements.fastapi.txt  setup.py  test_server_locally.py
.devcontainer/: Dockerfile  devContainer.json
.github/: pull_request_template.md
.github/workflows/: cicd.yaml  deploy-dataflow-feature.yaml  deploy-dataflow-inference.yaml  deploy-dataflow.yaml
dags/: iris_batch_inference_dag.py  iris_batch_inference_prod_dag.py  iris_batch_inference_staging_dag.py  iris_training_dag.py  iris_training_prod_dag.py  iris_training_staging_dag.py
docker_test/: Dockerfile  requirements.txt  test.py
docs/: composer_airflow_training_inference.md  dataflow_github_action.md  gcp_feature_platform.md  logging_improvements.md  observability_plan.md  production_deployment_plan.md  remove_old_server.md  scale_inference_batching.md  simplify_inference_pipeline.md  staging_prod_environments.md
kfp-env/: pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ml_pipelines.egg-info/: PKG-INFO  SOURCES.txt
observability/: alert_rules.yml  alertmanager.yml  docker-compose.observability.yml  otel-collector.yml  prometheus.yml
observability/grafana/dashboards/: cost-attribution.json  dead-letters.json  investigation.json  pipeline-health.json
plan/: code.py  composer_airflow_training_inference.md  fraud_model_plan.md  gpu_vertex_pipelines.md  staging_prod_environments.md
schemas/iris_xgboost/vertex/: prediction.yaml
scripts/: bq_dataloader.py  clean_reinstall.sh  deploy_dataflow_feature.sh  deploy_dataflow_streaming.sh  load_data.sh  run_pubsub_producer.sh  setup_artifact_registry.sh  setup_composer.sh  setup_dead_letter_table.sh  setup_feature_store.sh  setup_kafka.sh  setup_pubsub.sh  sync_dags.sh
src/dataflow/: iris_feature_pipeline.py  iris_inference_pipeline.py  iris_streaming_pipeline.py
src/dataflow/models/: iris_schema.py
src/dataflow/utils/: dead_letter.py  feature_sync.py  online_store_reader.py  online_store_writer.py
src/feature_store/: feature_definitions.py  ingest.py  schema.py  setup.py  sync.py
src/feature_store/iris/: feature_definitions.py
src/iris_xgboost/: constants.py
src/iris_xgboost/models/: prediction.py
src/iris_xgboost/pipelines/: iris_pipeline.py  iris_pipeline_inference.py  iris_pipeline_training.py
src/iris_xgboost/pipelines/components/: data.py  deploy.py  evaluation.py  get_model.py  models.py  register.py  schema.py
src/kafka_scripts/: setup_kafka_bastion.sh
src/ml_pipelines_kfp/: constants.py  log.py  test.ipynb
src/ml_pipelines_kfp/dataflow/: iris_streaming_pipeline.py
src/ml_pipelines_kfp/iris_xgboost/: bq_dataloader.py  constants.py  kafka_producer.py  load_data.sh  pubsub_producer.py  server.py
src/ml_pipelines_kfp/iris_xgboost/data/: iris.csv
src/ml_pipelines_kfp/iris_xgboost/models/: instance.py  prediction.py
src/ml_pipelines_kfp/iris_xgboost/pipelines/: iris_pipeline_inference.py  iris_pipeline_inference_kafka.py  (+4 more)
src/ml_pipelines_kfp/notebooks/: test_notebook_feature_platform.ipynb  verify_model_features.ipynb
src/notebooks/: xgboost_training.ipynb
src/notebooks/examples/: custom_base_image_component.yaml  default_base_image_component.yaml  gpu_training.yaml  sample_notebook.ipynb
src/notebooks/xgboost/: xgb_pipeline.json  xgboost_training.ipynb
src/workflows/components/: constants.py
src/workflows/configs/: config.py
src/workflows/pipeline/: train_xgboost_model.py
test/: test_model_loading.py  test_pubsub.py
(+28 files in other folders)
